--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 dependencies {
     implementation 'org.javacord:javacord:3.7.0'
     implementation 'com.sedmelluq:lavaplayer:1.3.77'
-    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+    implementation 'org.slf4j:slf4j-simple:1.7.32'
 }
 
 test {
