--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'com.afkfish'
-version '1.0-SNAPSHOT'
+version '0.1'
 
 repositories {
     mavenCentral()
@@ -14,10 +14,6 @@ repositories {
 
 dependencies {
     implementation 'org.javacord:javacord:3.7.0'
-    implementation 'com.sedmelluq:lavaplayer:1.3.77'
-    implementation 'org.slf4j:slf4j-simple:1.7.32'
-}
-
-test {
-    useJUnitPlatform()
+    implementation 'com.sedmelluq:lavaplayer:1.3.78'
+    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
 }
