--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,22 +4,22 @@ on:
   push:
     branches: [ "main" ]
 
-permissions:
-  contents: read
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 19
+    - name: Set up JDK 18
       uses: actions/setup-java@v3
       with:
-        java-version: '19'
+        java-version: '18'
         distribution: 'temurin'
+    - name: Update the permissions for gradlew
+      run: chmod +x ./gradlew
+    - name: Validate Gradle wrapper
+      uses: gradle/wrapper-validation-action@v1
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      uses: gradle/gradle-build-action@v2
       with:
         arguments: build
