--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         java-version: '18'
         distribution: 'temurin'
-        architecture: 'armv7'
+        architecture: 'aarch64'
     - name: Update the permissions for gradlew
       run: chmod +x ./gradlew
     - name: Validate Gradle wrapper
@@ -23,7 +23,7 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@v2
       with:
-        arguments: build
+        arguments: shadowJar
     - uses: actions/upload-artifact@v3
       with:
           name: Package
