--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,12 +18,7 @@ jobs:
         architecture: 'aarch64'
     - name: Update the permissions for gradlew
       run: chmod +x ./gradlew
-    - name: Validate Gradle wrapper
-      uses: gradle/wrapper-validation-action@v1
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@v2
-      with:
-        arguments: shadowJar
+    - run: ./gradlew shadowJar
     - uses: actions/upload-artifact@v3
       with:
           name: Package
