chore: trying artifact upload #4

--- a/.github/workflows/docker build.yml
+++ b/.github/workflows/docker build.yml
@@ -1,7 +1,9 @@
 name: Docker image CI
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [ main ]
+
 
 jobs:
   build:
@@ -45,7 +47,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          platforms: linux/arm/v7
+          platforms: linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
