--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Java CI with Gradle
+name: Gradle CI to x64
 
 on:
   push:
@@ -15,10 +15,14 @@ jobs:
       with:
         java-version: '18'
         distribution: 'temurin'
-        architecture: 'aarch64'
     - name: Update the permissions for gradlew
       run: chmod +x ./gradlew
-    - run: ./gradlew shadowJar
+    - name: Validate Gradle wrapper
+      uses: gradle/wrapper-validation-action@v1
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: shadowJar
     - uses: actions/upload-artifact@v3
       with:
           name: Package
